# arabic-voice-banking-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  README.md  README.python.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/data/: mock_banking.json
backend/src/: config.ts  main.ts
backend/src/domain/: banking-models.ts  conversation.ts
backend/src/lib/: error-schemas.ts  errors.ts  logger.ts  timer.ts
backend/src/routes/: conversation.ts
backend/src/services/: banking.ts  llm.ts  session.ts  stt.ts  tts.ts
backend/src/voice_agent/: config.py  main.py
backend/src/voice_agent/api/: routes.py  schemas.py
backend/src/voice_agent/domain/: banking_models.py  conversation.py  prompts.py
backend/src/voice_agent/lib/: errors.py  logger.py  timer.py
backend/src/voice_agent/services/: banking.py  llm.py  session.py  stt.py  tts.py
backend/tests/integration/: test_conversation.py
backend/tests/unit/: banking.test.ts  conversation.test.ts  test_banking.py  test_prompts.py  test_session.py  timer.test.ts
docs/: architecture-diagram.mmd  decision-log.md  sequence-diagram.mmd
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: LatencyPanel.tsx  Transcript.tsx  VoiceButton.tsx
frontend/src/hooks/: useAudioRecording.ts  useConversation.ts
frontend/src/lib/: api.ts
frontend/tests/: conversation.test.ts
(+1 files in other folders)
